styled what we do section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <!-- End hero -->
 
         <!--what we do section-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>WHAT WE DO</h2>
             <p>
                 butcher selfies chambray shabbty chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Blottle chillwave you probably havent heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwal Marfa Schlitz sustainable Intelligentsianunami deep v craft
