added your trainers

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </li>
 
                     <li>
-                        <a href="your-trainer">Your Trainers</a>
+                        <a href="your-trainers">Your Trainers</a>
                     </li>
 
                     <li>
@@ -114,7 +114,7 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section>
+        <section  id="your-trainers">
             <h2>MEET THE TRAINERS</h2>
         </section>
 
