finished the trainers html and css

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     </li>
 
                     <li>
-                        <a href="your-trainers">Your Trainers</a>
+                        <a href="#your-trainers">Your Trainers</a>
                     </li>
 
                     <li>
-                        <a href="reach-out">Reach Out</a>
+                        <a href="#reach-out">Reach Out</a>
                     </li>
                 </ul>
             </nav>
@@ -76,7 +76,9 @@
 
         <!--what we do section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">WHAT WE DO</h2>
+            <h2 class="section-title primary-border">
+                WHAT WE DO
+            </h2>
             <p>
                 butcher selfies chambray shabbty chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Blottle chillwave you probably havent heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwal Marfa Schlitz sustainable Intelligentsianunami deep v craft
             </p>
@@ -114,8 +116,43 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section  id="your-trainers">
-            <h2>MEET THE TRAINERS</h2>
+        <section  id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                MEET THE TRAINERS
+            </h2>
+            <!-- first tainer bio -->
+            <article class="trainer">
+                <img src="./assets/img/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
+                    </p>
+                </div>
+            </article>
+            <!-- first second bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-left">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
+                    </p>
+                </div>
+                <img src="./assets/img/trainer-2.jpg" alt="Joanna Gill in her workout clothes, ready to pump iron">
+            </article>
+            <!-- first third bio -->
+            <article class="trainer">
+                <img src="./assets/img/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!--"reach out" section-->
