add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 
                             <!--hero/jumbotron-->
         <section class="hero">
+            <div>
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi perspiciatis ipsa iste aperiam ut pariatur ab tempore magnam dignissimos accusamus! Asperiores quam laboriosam quia quos illum tempore provident hic voluptatibus!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat eum dolore, eius nostrum unde enim omnis suscipit mollitia consequatur quaerat. Rem aperiam laudantium, laborum voluptates dolorum quasi nisi deserunt vitae!
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
