--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                             <!--hero/jumbotron-->
         <section class="hero">
-            <div>
+            <div class="hero-cta">
                 <h2>Start Building Habits.</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi perspiciatis ipsa iste aperiam ut pariatur ab tempore magnam dignissimos accusamus! Asperiores quam laboriosam quia quos illum tempore provident hic voluptatibus!
@@ -83,41 +83,77 @@
 
         <!--what we do section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">
-                WHAT WE DO
-            </h2>
-            <p>
-                butcher selfies chambray shabbty chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Blottle chillwave you probably havent heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwal Marfa Schlitz sustainable Intelligentsianunami deep v craft
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    WHAT WE DO
+                </h2>
+            </div>
+
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabbty chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Blottle chillwave you probably havent heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwal Marfa Schlitz sustainable Intelligentsianunami deep v craft
+                </p>
+            </div>
         </section>
 
         <!--what you do section-->
         <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">WHAT YOU DO</h2>
 
-            <div>
-                <!-- insert this img element -->
-                <img src="./assets/img/step-1.svg" alt="icon1">
-                <h3>Step 1: <span>Fill Out the Form Above</span></h3>
-                <p>You're already here, so why not?</p>
+            <div class="step">
+                <h3>Step 1.</h3>
+
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/img/step-1.svg" alt="icon1">
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill Out The Form Above</h4>
+                        <p>You're already here, so why not?</p>
+                    </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/img/step-2.svg" alt="icon2">
-                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3>Step 2.</h3>
+
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/img/step-2.svg" alt="icon2">
+                    </div>
+                    <div class="step-text">
+                        <h4>Consult With One Of Our Trainers</h4>
+                        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/img/step-3.svg" alt="icon3">
-                <h3>Step 3: <span>Get Running.</span></h3>
-                <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+            <div class="step">
+                <h3>Step 3.</h3>
+
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/img/step-3.svg" alt="icon3">
+                    </div>
+                    <div class="step-text">
+                        <h4>Get Running.</h4>
+                        <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+                    </div> 
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/img/step-4.svg" alt="icon4">
-                <h3>Step 4: <span>ee Results</span></h3>
-                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            <div class="step">
+                <h3>Step 4.</h3>
+
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/img/step-4.svg" alt="icon4">
+                    </div>
+                    <div class="step-text">
+                        <h4>See Results</h4>
+                        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                    </div>
+                </div>
             </div>
 
         </section>
