--- a/index.html
+++ b/index.html
@@ -159,44 +159,46 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section  id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">
-                MEET THE TRAINERS
-            </h2>
-            <!-- first tainer bio -->
-            <article class="trainer">
-                <img src="./assets/img/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
-                    </p>
-                </div>
-            </article>
-            <!-- first second bio -->
-            <article class="trainer">
-                <div class="trainer-bio text-left">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
-                    </p>
-                </div>
-                <img src="./assets/img/trainer-2.jpg" alt="Joanna Gill in her workout clothes, ready to pump iron">
-            </article>
-            <!-- first third bio -->
-            <article class="trainer">
-                <img src="./assets/img/trainer-3.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the Headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
-                    </p>
-                </div>
-            </article>
-        </section>
+        <div class="trainers">
+            <section  id="your-trainers">
+                <h2 class="section-title primary-border">
+                    MEET THE TRAINERS
+                </h2>
+                <!-- first trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/img/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed / Strength</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
+                        </p>
+                    </div>
+                </article>
+                <!-- second trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/img/trainer-2.jpg" alt="Joanna Gill in her workout clothes, ready to pump iron">
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Joanna Gill</h3>
+                        <h4 class="trainer-role">Endurance</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
+                        </p>
+                    </div>
+                </article>
+                <!-- third trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/img/trainer-3.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                    <div class="trainer-bio text-left">
+                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime hic dolorum mollitia amet veniam dignissimos eius repudiandae! Cupiditate numquam temporibus ducimus ad, vel, ut, corporis qui aliquid totam culpa veritatis?
+                        </p>
+                    </div>
+                </article>
+            </section>
+        </div>
 
         <!--"reach out" section-->
         <section id="reach-out" class="contact">
