--- a/index.html
+++ b/index.html
@@ -204,14 +204,22 @@
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">REACH OUT</h2>
             <div class="contact-info">
-                <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24174.23704166746!2d-111.91843067075204!3d40.76687137684785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5010d1857a3%3A0xe5e5843804198a5d!2s345%20W%20100%20S%2C%20Salt%20Lake%20City%2C%20UT%2084101!5e0!3m2!1sen!2sus!4v1610820165511!5m2!1sen!2sus" 
-                    width="400" 
-                    height="400" 
-                    frameborder="0" 
-                    style="border:0;" 
-                    allowfullscreen="" aria-hidden="false" tabindex="0">
-                </iframe>
+                
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br>
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br>
+                        Some Town, Ca <br>
+                        12345 <br>
+                        P: 555.RUN.BUDZ (555.786.2839) <br>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
 
                 <div class="contact-form">
                     <h3>Contact Us</h3>
@@ -222,26 +230,21 @@
                         <label for="contact-message">Message</label>
                         <textarea id="contact-message" placeholder="Message"></textarea>
 
-                        <button type="submit">submit</button>
+                        <button type="submit">Submit</button>
                     </form>
                 </div>
 
-                <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br>
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <address>
-                    55 Main Street <br>
-                    Some Town, Ca <br>
-                    12345 <br>
-                    P: 555.RUN.BUDZ (555.786.2839) <br>
-                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>
-            </div>
-        </div>
+
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24174.23704166746!2d-111.91843067075204!3d40.76687137684785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5010d1857a3%3A0xe5e5843804198a5d!2s345%20W%20100%20S%2C%20Salt%20Lake%20City%2C%20UT%2084101!5e0!3m2!1sen!2sus!4v1610820165511!5m2!1sen!2sus" 
+                    width="400" 
+                    height="400" 
+                    frameborder="0" 
+                    style="border:0;" 
+                    allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
+               
+             </div>
     </section>
 
         <!--footer-->
@@ -254,3 +257,16 @@
         </footer>
     </body>
 </html>
+
+
+
+
+
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24174.23704166746!2d-111.91843067075204!3d40.76687137684785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5010d1857a3%3A0xe5e5843804198a5d!2s345%20W%20100%20S%2C%20Salt%20Lake%20City%2C%20UT%2084101!5e0!3m2!1sen!2sus!4v1610820165511!5m2!1sen!2sus" 
+                    width="400" 
+                    height="400" 
+                    frameborder="0" 
+                    style="border:0;" 
+                    allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
